frontend/src/style.css
body{
  margin: 0;
  padding: 0;
  /* -----------------Main background for all webpages------------- */
  background-color: rgb(200, 180, 150)    
}
/* ------------------------------------App class styling */
.App{
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}
/* ------------------------------Start of NavBar Styling---------------------- */
.navbarContainer {
  padding: 0.5em;
  font-size: 2em;
  display: flex;
  justify-content: space-between;
  background-color: rgb(90, 77, 65);
  color: rgb(245, 245, 220);
}
.navbarContainer a {
height: 100%;
color: rgb(245, 245, 220);
text-decoration: none;
}
.navbarTitle{
height: 100%;
color: rgb(255, 99, 71);
text-align: center;
}
/* -----------------------------------End of NavBar Styling-------------------------- */
/* ---------------------------------------------------Start of Footer styling */
.footerContainer {
  flex: 1;
  position: relative;
}
.footerImg {
  max-height: 100%;
  width: 100%;
  position: absolute;
}
/* -----------------------------------End of Footer styling */
/* ---------------------------------------------------Start of login/Signup page */
.loginAndSignUpContainer{
  display: flex;
  flex-flow: column;
  height: 1000px;
  align-items: center;
}
  /* -----------------------Logged In Options */
.loggedInOptionsContainer{
  height: 1000px;
  width: 100%;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: space-between;
  background-image: url(./loggedInBackground.PNG);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.loggedInTitle{
  color: rgb(174, 52, 0);
  background-color: rgba(50, 12, 12, 0.669);
  border-radius: 30px;
}
.loggedInLinks{
  display: flex;
  height: 30%;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}
.loggedInLogoutBtn{
  font-size: xx-large;
  border-radius: 30px;
  background-color: rgb(90, 77, 65);
  color: rgb(255, 99, 71);
  transition: transform 0.1s ease-in-out;
  margin-bottom: 4rem;
}
  /* For button click, to show it's being pressed */
.loggedInLogoutBtn:active {
  transform: scale(0.95);
}

  /* -----------------------login Form */
.loginContainer{
  width: 100%;
  height: 50%;
  background-image: url(./loginBackground.webp);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.loginForm{
  height: 100%;
  display: flex;
  flex-flow: column;
  justify-content: space-around;
  align-items: center;
}
.inputNameEmailLogin{
  height: 3rem;
  width: 100%;
  font-size: large;
  text-align: center;
}
.inputPasswordLogin{
  height: 3rem;
  width: 100%;
  font-size: large;
  text-align: center;
}
  /* ---------------------Signup form */
.signupContainer{

  width: 100%;
  height: 50%;
  /* padding: 2rem; */
  background-image: url(./signUpBackground.webp);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.signupForm{
  height: 100%;
  display: flex;
  flex-flow: column;
  justify-content: space-around;
  align-items: center;
}
.inputEmailSignup{
  height: 3rem;
  width: 100%;
  font-size: large;
  text-align: center;
}
.inputUsernameSignup{
  height: 3rem;
  width: 100%;
  font-size: large;
  text-align: center;
}
.inputPasswordSignup{
  height: 3rem;
  width: 100%;
  font-size: large;
  text-align: center;
}
/* ---------------------------------End of login/Signup page---------- */

/* -----------------------------------------------------------------Start of Options Page styling */
.optionsPageContainer{
  display: flex;
  flex-flow: column;
  align-items: center;
}
.optionsTitle{
  color: rgb(0, 255, 255);
}
.optionsDescr{
  font-size: large;
}
.optionsList{
  list-style-type: none;
  width: 100vw;
  margin: 3em 0 0 0;
  padding: 0;
}

.optionsList *{
  text-decoration: none;
}
.optionLink1{
  color: rgb(255, 215, 0);
  text-shadow: 3px 3px 6px rgba(255, 215, 0, 0.8);
}
.optionLink2{
  color: rgb(255, 215, 0);
  text-shadow: 3px 3px 6px rgba(255, 215, 0, 0.8);
}
.optionLink3{
  color: rgb(255, 215, 0);
  text-shadow: 3px 3px 6px rgba(255, 215, 0, 0.8);
}
.optionListItem1{
  padding: 3rem 0;
  font-size: xx-large;
  text-align: center;
  background-image: url(./greenPoison.gif);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.optionListItem2{
  padding: 3rem 0;
  font-size: xx-large;
  text-align: center;
  background-image: url(./greenPoison.gif);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.optionListItem3{
  padding: 3rem 0;
  font-size: xx-large;
  text-align: center;
  background-image: url(./greenPoison.gif);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
/* ---------------------------------End of options page styling-------- */

/* -----------------------------------------------------------------Start of Create5E page styling */
.create5EComponentContainer{
  height: 800px;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: space-around;
  background-image: url(./create5EBackground.webp);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.errorSignup{
  color: rgb(255, 0, 0);
  font-size: xxx-large;
}
.create5ETitle{
  margin: 0;
  color: rgb(141, 150, 255);
  font-size: xx-large;
}
/* -------------Create Form Styling */
.create5EForm{
  border: solid black;
  width: 40%;
  height: 80%;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: space-around;
  background-image: url(./createFormBackground.webp);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.create5EForm > label{
  width: 100%;
  display: flex;
  flex-flow: column;
  align-items: center;
  color: rgb(2, 12, 122);
  font-size: x-large;
}
.create5EForm > label > input{
  width: 90%;
  height: 2rem;
  text-align: center;
  background-color: rgba(255, 215, 0, 0.5);
}
.create5EFormTitle{
  text-align: center;
  color: rgb(152, 161, 255);
  font-size: x-large;
}
.create5EAttunementRadio{
  display: flex;
  flex-flow: column;
  align-items: center;
}
.create5EAttunementTitle{
  font-weight: 100;
  color: rgb(2, 12, 122);
  font-size: x-large;
}
.labelCreateItemAttunement{
  color: rgb(255, 100, 100);
  font-size: x-large;
}

.labelCreateItemDescription{
  color: rgb(2, 12, 122);
  font-size: x-large;
}
.inputCreateItemDescription{
  width: 90%;
  height: 100px;
  text-align: center;
  background-color: rgba(255, 215, 0, 0.5);
}
/* ---------------------------------End of Create5E page styling------- */

/* -----------------------------------------------------------------Start of UsersContent page styling */

/* Carousel Styling */
.carouselContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  overflow: hidden;
}

.carouselConContents {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.carouselItemContainer {
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: space-around;
  width: 100%;
  border: solid black 1px;
  margin: 10px;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 10px;
}
.CarouselItemUpdateContainer {
  height: 800px;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: space-around;
}
.carItemBottomDescription{
  text-align: center;
  font-weight: bold;
}
.carItemBottomInnerDescription{
  font-weight: 100;
}

/* -------------Update Form Styling */
.updateForm {
  border: solid black;
  height: 80%;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: space-around;
}

.updateForm > label {
  width: 100%;
  display: flex;
  flex-flow: column;
  align-items: center;
  color: rgb(2, 12, 122);
  font-size: x-large;
}

.updateForm > label > input,
.updateForm > label > textarea {
  width: 90%;
  height: 2rem;
  text-align: center;
  background-color: rgba(255, 215, 0, 0.5);
}

.updateForm > label > textarea {
  height: 100px;
}

.updateFormTitle {
  text-align: center;
  color: rgb(152, 161, 255);
  font-size: x-large;
}

.updateAttunementRadio {
  display: flex;
  flex-flow: column;
  align-items: center;
}

.updateAttunementTitle {
  font-weight: 100;
  color: rgb(2, 12, 122);
  font-size: x-large;
}

.labelUpdateItemAttunement {
  color: rgb(255, 100, 100);
  font-size: x-large;
}

.labelUpdateItemDescription {
  color: rgb(2, 12, 122);
  font-size: x-large;
}

.inputUpdateItemDescription {
  width: 90%;
  height: 100px;
  text-align: center;
  background-color: rgba(255, 215, 0, 0.5);
}

/* ---------------------------------End of UsersContent page styling------- */

